# mkdocs-pycafe

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  release.sh
.ci-package-locks/integration/: osubuntu-python3.8-ipywidgets.txt
.ci-package-locks/unit/: osmacos-python3.12-ipywidgets.txt  osmacos-python3.6-ipywidgets.txt  osubuntu-python3.12-ipywidgets.txt  osubuntu-python3.6-ipywidgets.txt  oswindows-python3.12-ipywidgets.txt  oswindows-python3.6-ipywidgets.txt
.github/workflows/: test.yaml
docs/: index.md
src/mkdocs_pycafe/: __init__.py
tests/: __init__.py
tests/integration/: test_annotation.py
tests/unit/: basics_test.py
