[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-pycafe"
dynamic = ["version"]
description = 'Mkdocs plugins to link code to py.cafe'
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
keywords = []
authors = [
  { name = "Maarten A. Breddels", email = "maartenbreddels@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "markdown"
]

[project.urls]
Documentation = "https://github.com/py-cafe/mkdocs-pycafe#readme"
Issues = "https://github.com/py-cafe/mkdocs-pycafe/issues"
Source = "hhttps://github.com/py-cafe/mkdocs-pycafe"

[tool.hatch.version]
path = "src/mkdocs_pycafe/__about__.py"



[project.optional-dependencies]
test = [
    "pytest"
]

integration = [
    "playwright",
    "pytest-playwright",
    "mkdocs",
    "mkdocs-material",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "pymdown-extensions>=10.9"
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/mkdocs_pycafe tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 160
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 160
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs-pycafe"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["mkdocs-pycafe", "tests"]
branch = true
parallel = true
omit = [
  "src/mkdocs-pycafe/__about__.py",
]

[tool.coverage.paths]
mkdocs-pycafe = ["src/mkdocs-pycafe", "*/mkdocs-pycafe/src/mkdocs-pycafe"]
tests = ["tests", "*/mkdocs-pycafe/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
